wp-content/themes/flhlmq/style.css
/* ... */
ul.dropdown-menu.show {
  text-align: center;
}

.navbar-toggler {
  border: none;
}

.dropdown-item:hover:hover {
  background-color: #273922;
  color: #f7f7ff;
}

/*
Theme Name: FLHLMQ
Author: Delphine, Kristy, Prethiah
Author URI: https://github.com/rprethi/federation-des-locataires-mammouths-poilues
Description: Thème pour FLHLMQ.
Version: 1.0
*/
/* ----- STYLE DE L'ACCUEIL SECTION SERVICES----- */
#accueil .services__taille {
  width: 100%;
  padding: 20px;
}
#accueil .section-services {
  display: flex;
  flex-direction: column;
}
#accueil .section-services a {
  font-family: "Nunito Italic";
  color: #88b07e;
  font-weight: bold;
  font-size: 16px;
  text-decoration: none;
  align-self: end;
  margin-bottom: 3%;
}
#accueil .section-services a:hover {
  text-decoration-color: #88b07e;
  color: #c4b091;
}
#accueil .section-services .align-lien {
  display: flex;
  justify-content: space-between;
}
#accueil .services {
  display: grid;
  grid-template-rows: repeat(auto-fit, minmax(200px, auto));
  gap: 15px;
  justify-items: center;
  color: white;
  width: 100%;
}
#accueil .services__item {
  width: 100%;
  height: 200px;
  background-color: #273922;
  border-radius: 25px;
  display: grid;
  grid-template-rows: 2fr 1fr;
  padding: 20px;
  box-sizing: border-box;
  transition: background-color, color, box-shadow, 0.25s;
}
#accueil .services__item:hover {
  background-color: #88b07e;
  color: #273922;
  box-shadow: 5px 5px 10px 5px rgba(29, 59, 9, 0.5);
  transform: scale(1.005) translateY(1%);
}
#accueil .services__item:hover h3 {
  color: #273922;
}
#accueil .services__item-top svg {
  width: 3em;
}
#accueil .services__item-bottom {
  display: flex;
  flex-direction: column;
  align-items: start;
}
#accueil .services__item-bottom svg {
  align-self: end;
  width: 3em;
}
@media screen and (min-width: 768px) {
  #accueil .services {
    display: flex;
    max-width: 1500px;
    justify-content: space-between;
  }
  #accueil .services__item {
    width: 100%;
    height: auto;
    max-width: 350px;
    aspect-ratio: 1/1;
  }
}

/*
Theme Name: FLHLMQ
Author: Delphine, Kristy, Prethiah
Author URI: https://github.com/rprethi/federation-des-locataires-mammouths-poilues
Description: Thème pour FLHLMQ.
Version: 1.0
*/
/* ----- STYLE DE L'ACCUEIL ACTUALITÉ----- */
.actualite {
  padding: 20px;
}
.actualite img {
  height: 275px;
  -o-object-fit: cover;
     object-fit: cover;
}
.actualite a {
  font-family: "Nunito Italic";
  color: #88b07e;
  font-weight: bold;
  font-size: 16px;
  text-decoration: none;
}
.actualite a:hover {
  text-decoration-color: #88b07e;
  color: #c4b091;
}
.actualite__title__lien {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.actualite ul {
  list-style: none;
}
.actualite ul a:link {
  text-decoration: none;
}
.actualite__item {
  display: grid;
  justify-items: start;
  align-items: start;
  grid-template-columns: 1fr 1fr 2fr 0fr;
  transition: background 0.5s;
}
.actualite__item:hover {
  transition-duration: 0.5s;
  background: white;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
}
.actualite__item__date {
  text-decoration: none;
  font-family: "Nunito";
  font-size: 24px;
  color: #88b07e;
  font-size: 16px;
  font-weight: bold;
}
.actualite__item__img {
  display: none;
  width: 100%;
  height: 400px;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
}
.actualite__item__title {
  font-family: "Nunito";
  font-size: 24px;
  padding: 0 20px 0 20px;
  color: #273922;
  font-size: 16px;
  text-wrap: wrap;
  font-weight: bold;
}
.actualite__item__title p {
  display: none;
  position: relative;
  top: 5%;
  font-weight: normal;
  color: #0c0909;
}
.actualite__item hr {
  opacity: 75%;
  width: 100%;
  grid-column: 2/2;
  border-top: 5px #88b07e solid;
}
@media screen and (min-width: 1400px) {
  .actualite .actualite__item {
    grid-template-columns: 1fr 1fr 3fr 4fr;
  }
  .actualite .actualite__item__date {
    font-size: 24px;
  }
  .actualite .actualite__item__img {
    display: block;
    -o-object-position: 0% 10%;
       object-position: 0% 10%;
  }
  .actualite .actualite__item__title {
    font-size: 24px;
    text-wrap: balance;
    padding: 0 50px 0 50px;
  }
  .actualite .actualite__item__title p {
    display: block;
  }
}

/* ----- STYLE DU PARALLAX----- */
.section-parallax {
  overflow-x: hidden;
  overflow-y: auto;
  width: 100%;
  z-index: -2;
  height: 45vh;
  position: relative;
  top: 0;
  margin: 0;
}
.section-parallax img {
  width: 100%;
  position: absolute;
  background: transparent;
  height: 300px;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: 0 100%;
     object-position: 0 100%;
  animation-name: parallax-effect;
  animation-duration: 4s;
  animation-direction: alternate;
  animation-timing-function: linear;
  animation-timeline: scroll(root);
}

@keyframes parallax-effect {
  0% {
    -o-object-position: bottom;
       object-position: bottom;
  }
  100% {
    -o-object-position: top;
       object-position: top;
  }
}
/*
Theme Name: FLHLMQ
Author: Delphine, Kristy, Prethiah
Author URI: https://github.com/rprethi/federation-des-locataires-mammouths-poilues
Description: Thème pour FLHLMQ.
Version: 1.0
*/
/* ----- STYLE DE L'ACCUEIL SECTION TÉMOIN ----- */
.swiper-temoin {
  width: 350px;
  height: 300px;
}

.silde-temoin {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 5px solid #273922;
  padding: 20px;
  border-radius: 15px;
  background-color: #f7f7ff;
  box-shadow: 0 4px 15px rgba(12, 9, 9, 0.1);
}

.gradient-text {
  font-size: 14px !important;
  background: linear-gradient(to bottom, #0c0909, #88b07e);
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  display: inline-block;
  transition: color 0.3s ease;
}
/* ... */

